tests/errors/bad_equ3.asm
FUNC LABEL 0
    EQU VAL 9
    EQU VAL 0
    RET
